Bug 504608 - "Advanced Options" dialog opened from properties dialog is modal and blocks plasmashell
Summary: "Advanced Options" dialog opened from properties dialog is modal and blocks p...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.3.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Akseli Lahtinen
URL:
Keywords:
: 487240 (view as bug list)
Depends on:
Blocks: 504615
  Show dependency treegraph
 
Reported: 2025-05-21 12:59 UTC by Summersay415
Modified: 2025-05-24 14:34 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.15
Sentry Crash Report:


Attachments
Video with demonstration of the bug (782.12 KB, video/mp4)
2025-05-21 12:59 UTC, Summersay415
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Summersay415 2025-05-21 12:59:26 UTC
Created attachment 181604 [details]
Video with demonstration of the bug

SUMMARY
Plasma ignores all input when Advanced Options Dialog in Application Properties Dialog (opened from Plasma, not from other apps) is open.

STEPS TO REPRODUCE
1. Get any .desktop file on Plasma Desktop.
2. Open its properties.
3. Switch to Application tab.
4. Click Advanced Options.

OBSERVED RESULT
Plasma stops registering any input events.

EXPECTED RESULT
Plasma should work as normal.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.12.29-1-lts (64-bit)
Graphics Platform: Wayland
Processors: 12 × 12th Gen Intel® Core™ i5-1235U
Memory: 15.4 GiB of RAM
Graphics Processor: Intel® Graphics

ADDITIONAL INFORMATION
See video in attachment with demonstration
Comment 1 Artemiy 2025-05-21 13:10:39 UTC
Get same bug:

Operating System: CachyOS Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.7-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 8700F 8-Core Processor
Memory: 30.9 ГиБ of RAM
Graphics Processor: NVIDIA GeForce RTX 2060 SUPER
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7E24
System Version: 1.0
Comment 2 Nate Graham 2025-05-21 14:02:59 UTC
Can confirm. It's because that's a modal dialog, which blocks all its parent windows, and in this case its final parent window is Plasmashell!
Comment 3 Artemiy 2025-05-21 14:29:33 UTC
(In reply to Nate Graham from comment #2)
> Can confirm. It's because that's a modal dialog, which blocks all its parent
> windows, and in this case its final parent window is Plasmashell!

More like is it. I can use keys-modificates or use commands for kwin (cube and others) but not click in others windows. Problem think in focusing.
Comment 4 Akseli Lahtinen 2025-05-22 11:39:26 UTC
Same happens with Advanced Permissions dialog
Comment 5 Bug Janitor Service 2025-05-22 11:56:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1901
Comment 6 Akseli Lahtinen 2025-05-22 14:35:28 UTC
Git commit 9143fc2a5962d190e36f6e99d9ca1c02506097a5 by Akseli Lahtinen.
Committed on 22/05/2025 at 14:35.
Pushed by akselmo into branch 'master'.

Fix dialog modality settings

By default all dialogs are ApplicationModal, thus they block clicking
on any other app while the dialog is open.

Set them to WindowModal so they only block the parent window.

M  +2    -0    src/widgets/kpropertiesdialogbuiltin_p.cpp

https://invent.kde.org/frameworks/kio/-/commit/9143fc2a5962d190e36f6e99d9ca1c02506097a5
Comment 7 Roke Julian Lockhart Beedell 2025-05-24 08:06:45 UTC
*** Bug 487240 has been marked as a duplicate of this bug. ***
Comment 8 Roke Julian Lockhart Beedell 2025-05-24 08:07:58 UTC
(In reply to Roke Julian Lockhart Beedell from comment #7)

Although https://bugs.kde.org/show_bug.cgi?id=487240 was first to be reported, I thought it was correct to mark it as a duplicate of this, since this issue is where the development occurred. Apologies if I got it the wrong way around.
Comment 9 Nate Graham 2025-05-24 14:34:51 UTC
Nope, that's just fine!