Fix dialog modality settings

By default all dialogs are ApplicationModal, thus they block clicking
on any other app while the dialog is open.

Set them to WindowModal so they only block the parent window.

BUG: 504608